@@ -59,8 +59,8 @@ Bug Fixes
 Optimizations
 ----------------------
 
- * SOLR-7324: IndexFetcher does not need to call isIndexStale if full copy is already needed
-   (Stephan Lagraulet via Varun Thacker)
+* SOLR-7324: IndexFetcher does not need to call isIndexStale if full copy is already needed
+  (Stephan Lagraulet via Varun Thacker)
 
 Other Changes
 ----------------------
@@ -75,6 +75,8 @@ Other Changes
   all thread pools. (shalin)
 
 * SOLR-7384: Fix spurious failures in FullSolrCloudDistribCmdsTest. (shalin)
+
+* SOLR-6692: The default highlighter is much more extensible. (David Smiley)
 
 ==================  5.1.0 ==================
 
